--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST} www.ghostwritersplanet.com
-RewriteRule (.*) https://ghostwritersplanet.com/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} www.theweboclock.com
+RewriteRule (.*) https://theweboclock.com/$1 [R=301,L]
